# There is the two fixes:   --  Fix for the selection model (store hightlight ids instead numbers).   --  Fix for the change bounds for the selection (switch on z-index).

--- a/complex-components/pdf-viewer/src/style/AreaHighlight.css
+++ b/complex-components/pdf-viewer/src/style/AreaHighlight.css
@@ -18,4 +18,11 @@
 
 .AreaHighlight--selected .AreaHighlight__part {
   background: rgba(255, 226, 143, 1);
+  z-index: 1000;
+}
+
+.AreaHighlight--selected {
+  position: relative;
+  background: rgba(255, 226, 143, 1);
+  z-index: 1000;
 }
